Fixed task jumping when you edit it

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -305,6 +305,7 @@ html, body {
 					&:focus {
 						box-shadow: none;
 						outline: 0;
+						height: 30px;
 					}
 				}
 
